WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197857
IndexSet::isEmpty should use BitVector::isEmpty() instead of size()
https://bugs.webkit.org/show_bug.cgi?id=197857
Summary
IndexSet::isEmpty should use BitVector::isEmpty() instead of size()
Robin Morisset
Reported
2019-05-13 15:47:42 PDT
I missed this use of size() when adding isEmpty() to BitVector in
https://bugs.webkit.org/show_bug.cgi?id=197637
Attachments
Patch
(972 bytes, patch)
2019-05-13 15:49 PDT
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Morisset
Comment 1
2019-05-13 15:49:38 PDT
Created
attachment 369796
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-13 20:38:19 PDT
Comment on
attachment 369796
[details]
Patch Clearing flags on attachment: 369796 Committed
r245271
: <
https://trac.webkit.org/changeset/245271
>
WebKit Commit Bot
Comment 3
2019-05-13 20:38:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-05-13 20:39:18 PDT
<
rdar://problem/50751634
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug