IndexSet::isEmpty should use BitVector::isEmpty() instead of size() https://bugs.webkit.org/show_bug.cgi?id=197857

Reviewed by Darin Adler.

* wtf/IndexSet.h:
(WTF::IndexSet::isEmpty const):


Canonical link: https://commits.webkit.org/211995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245271 268f45cc-cd09-0410-ab3c-d52691b4dbfc